--- a/src/styl/vars.styl
+++ b/src/styl/vars.styl
@@ -5,4 +5,5 @@ order = join(" ",
   chart-dimension data-field colorpicker chart-modal,
   base-modal nav-top,
   fullscreen-dimmer chartedit-active chartedit-fullscreen chartedit-fullscreen-active fullscreen-err,
+  notifications,
 )
